docs: add OmniStream quick start guide